Mini-CRM-firebase

--- a/composer.json
+++ b/composer.json
@@ -7,14 +7,15 @@
     "require": {
         "php": "^7.3|^8.0",
         "fruitcake/laravel-cors": "^2.0",
-        "guzzlehttp/guzzle": "^7.0.1",
+        "google/cloud-storage": "*",
+        "guzzlehttp/guzzle": "*",
         "illuminate/http": "*",
+        "kreait/firebase-php": "*",
         "laravel/framework": "^8.75",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.4",
-        "maatwebsite/excel": "*",
-        "rap2hpoutre/laravel-log-viewer": "^2.3"
+        "maatwebsite/excel": "*"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
