--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "google/cloud-storage": "*",
         "guzzlehttp/guzzle": "*",
         "illuminate/http": "*",
-        "kreait/firebase-php": "*",
+        "kreait/firebase-php": "^5.26",
+        "kreait/laravel-firebase": "^3.4",
         "laravel/framework": "^8.75",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
